tests/neg-custom-args/captures/cc-this2/D_2.scala

class D extends C: // error
  this: {*} D =>
